crates/jsonschema-codegen/tests/ui/duplicate_validate_formats_attribute.rs
#[jsonschema::validator(validate_formats = true, validate_formats = false)]
struct Validator;

fn main() {}
